--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,8 +1,8 @@
-.header_logo {
+.header_logo .shown{
   background-color: mintcream;
 }
 
-.header_logo img{
+header img{
   height: 70px;
 }
 
@@ -10,9 +10,8 @@
   background-color: rgb(45, 122, 223);
 }
 .shown{
-  color: red;
+  background-color: rgb(45, 122, 223);
 }
 
 .hidden{
-  color: green;
 }
