--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,3 +1,7 @@
+*{
+  padding-left: 20px;
+}
+
 .header_logo .shown{
   background-color: mintcream;
 }
@@ -13,5 +17,11 @@ header img{
   background-color: rgb(45, 122, 223);
 }
 
-.hidden{
+.text{
+  color: rgb(45, 122, 223);
+}
+footer{
+  color:rgb(170, 157, 157);
+  width: 350px;
+  padding-top: 100px;
 }
