--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,13 +1,18 @@
-*{
-  padding-left: 20px;
-}
 
+header {
+  width: 100%;
+  height: 30px;
+}
+.body{
+  padding-left: 60px;
+}
 .header_logo .shown{
   background-color: mintcream;
 }
 
 header img{
-  height: 70px;
+  height: 50px;
+  padding-left: 60px;
 }
 
 .white_logo{
@@ -15,13 +20,87 @@ header img{
 }
 .shown{
   background-color: rgb(45, 122, 223);
+  width: 100%;
+  padding-bottom: 70px;
 }
+.hidden{
+  padding-bottom: 70px;
+
+}
+
+.text1{
+  color: rgb(45, 122, 223);
+  font-size: 27px;
+  width: 300px;
+  font-weight: bold;
+  padding-left: 20px;
+  padding-top: 30px;
+}
+.text2{
+  display: inline-flex;
+}
+.text3{
+  color: rgb(45, 122, 223);
+  font-size: 10px;
+}
+.text4{
+  color: rgb(45, 122, 223);
+  font-size: 10px;
+  padding-left: 20px;
+
+}
+
+.percents{
+  color: rgb(45, 122, 223);
+  font-size: 40px;
+
+
+}
+.text5{
+  color: rgb(45, 122, 223);
+  font-size: 17px;
+  width: 400px;
+  font-weight: bold;
+  padding-bottom: 50px;
+  padding-top: 50px;
+
+  
+}
+
 
 .text{
   color: rgb(45, 122, 223);
+
+
 }
+
 footer{
   color:rgb(170, 157, 157);
   width: 350px;
   padding-top: 100px;
+}
+
+.vertical-divider {
+  position: absolute;
+  display: table;
+  height: 25%;
+  width: 100%;
+}
+.vertical-divider .center-element {
+  position: relative;
+  display: table-cell;
+  vertical-align: middle;
+}
+.vertical-divider .center-element:before,
+.vertical-divider .center-element:after {
+  position: absolute;
+  content: "";
+  width: 1px;
+  left: 36%;
+  border-left: 1px solid black;
+}
+.vertical-divider .center-element:before {
+  bottom: 50%;
+  top: 0;
+  margin-bottom: 20px;
 }
