--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,27 +5,26 @@ header {
 }
 .body{
   padding-left: 60px;
-}
-.header_logo .shown{
-  background-color: mintcream;
+  /* background-image: url('../../assets/pexels-andrea-piacquadio-920382\ \(1\).jpg'); */
+  background-image: linear-gradient(90deg);
 }
 
 header img{
   height: 50px;
   padding-left: 60px;
+  margin-bottom: 70px;
+
 }
 
-.white_logo{
-  background-color: rgb(45, 122, 223);
-}
-.shown{
+.blue{
   background-color: rgb(45, 122, 223);
   width: 100%;
   padding-bottom: 70px;
 }
-.hidden{
-  padding-bottom: 70px;
 
+.logo{
+  background-color: white;
+  padding-bottom: 70px;
 }
 
 .text1{
@@ -53,6 +52,7 @@ header img{
 .percents{
   color: rgb(45, 122, 223);
   font-size: 40px;
+  padding-left: 25px;
 
 
 }
@@ -96,7 +96,7 @@ footer{
   position: absolute;
   content: "";
   width: 1px;
-  left: 36%;
+  left: 52%;
   border-left: 1px solid black;
 }
 .vertical-divider .center-element:before {
