--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,12 +1,12 @@
 
 header {
   width: 100%;
-  height: 30px;
+  height: 20px;
 }
 .body{
   padding-left: 60px;
-  /* background-image: url('../../assets/pexels-andrea-piacquadio-920382\ \(1\).jpg'); */
-  background-image: linear-gradient(90deg);
+  background-image: url('../../assets/pexels-andrea-piacquadio-920382\ \(1\).jpg');
+  /* background-image: linear-gradient(90deg); */
 }
 
 header img{
@@ -26,7 +26,6 @@ header{
 
 .logo{
   background-color: white;
-  padding-bottom: 70px;
 }
 
 .text1{
@@ -85,7 +84,7 @@ footer{
 .vertical-divider {
   position: absolute;
   display: table;
-  height: 25%;
+  height: 35%;
   width: 100%;
 }
 .vertical-divider .center-element {
@@ -98,11 +97,11 @@ footer{
   position: absolute;
   content: "";
   width: 1px;
-  left: 52%;
+  left: 35%;
   border-left: 1px solid black;
 }
 .vertical-divider .center-element:before {
-  bottom: 50%;
+  bottom: 40%;
   top: 0;
   margin-bottom: 20px;
 }
