--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -5,7 +5,8 @@ header {
 }
 .body{
   padding-left: 60px;
-  background-image: url('../../assets/pexels-andrea-piacquadio-920382\ \(1\).jpg');
+
+  /* background-image: url('../../assets/pexels-andrea-piacquadio-920382\ \(1\).jpg'); */
   /* background-image: linear-gradient(90deg); */
 }
 
@@ -31,10 +32,12 @@ header{
 .text1{
   color: rgb(45, 122, 223);
   font-size: 27px;
-  width: 300px;
+  width: 52vw;
   font-weight: bold;
-  padding-left: 20px;
-  padding-top: 30px;
+  text-align: center;
+  /* padding-left: 20px;
+  padding-top: 30px; */
+  
 }
 .text2{
   display: inline-flex;
@@ -42,6 +45,8 @@ header{
 .text3{
   color: rgb(45, 122, 223);
   font-size: 10px;
+  padding-left: 20px;
+
 }
 .text4{
   color: rgb(45, 122, 223);
@@ -60,7 +65,7 @@ header{
 .text5{
   color: rgb(45, 122, 223);
   font-size: 17px;
-  width: 400px;
+  width: 65vw;
   font-weight: bold;
   padding-bottom: 50px;
   padding-top: 50px;
