--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,7 @@
 
 header {
-  width: 100%;
-  height: 20px;
+  width: 100vw;
+  height: 10vh;
 }
 .body{
   padding-left: 60px;
@@ -20,8 +20,8 @@ header{
 }
 
 .blue{
-  background-color: rgb(45, 122, 223);
   width: 100%;
+  background-color: rgb(45, 122, 223);
   padding-bottom: 70px;
 }
 
@@ -41,26 +41,28 @@ header{
 }
 .text2{
   display: inline-flex;
+  width: 30vw;
 }
 .text3{
   color: rgb(45, 122, 223);
   font-size: 10px;
-  padding-left: 20px;
-
+  padding-left: 5vw;
+  height: 10vh;
+  width: 10vw;
+  width: 15vw;
+  
 }
 .text4{
   color: rgb(45, 122, 223);
   font-size: 10px;
-  padding-left: 20px;
-
+  padding-right: 50vw;
+  padding-left: 5vw;
 }
 
 .percents{
   color: rgb(45, 122, 223);
-  font-size: 40px;
+  font-size: 20vh;
   padding-left: 25px;
-
-
 }
 .text5{
   color: rgb(45, 122, 223);
@@ -69,8 +71,13 @@ header{
   font-weight: bold;
   padding-bottom: 50px;
   padding-top: 50px;
-
+  text-align: center;
   
+}
+
+.buttonDiv{
+  width: 50vw;
+  text-align: center;
 }
 
 
