--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,7 +1,9 @@
-
+*{
+  align-items: center;
+}
 header {
   width: 100vw;
-  height: 10vh;
+  height: 3vh;
 }
 .body{
   padding-left: 60px;
@@ -10,8 +12,13 @@ header {
   /* background-image: linear-gradient(90deg); */
 }
 
+.userImg{
+  width: 10vw;
+  height: 10vh;
+}
+
 header img{
-  height: 50px;
+  height: 40px;
   padding-left: 60px;
   margin-bottom: 70px;
 }
@@ -20,8 +27,8 @@ header{
 }
 
 .blue{
-  width: 100%;
-  background-color: rgb(45, 122, 223);
+  width: 100vw;
+  background-color: rgb(49, 105, 179);
   padding-bottom: 70px;
 }
 
@@ -30,13 +37,13 @@ header{
 }
 
 .text1{
-  color: rgb(45, 122, 223);
-  font-size: 27px;
+  color: rgb(49, 105, 179);
+  font-size: 25px;
   width: 52vw;
   font-weight: bold;
-  text-align: center;
-  /* padding-left: 20px;
-  padding-top: 30px; */
+  text-align: left;
+
+  
   
 }
 .text2{
@@ -44,7 +51,7 @@ header{
   width: 30vw;
 }
 .text3{
-  color: rgb(45, 122, 223);
+  color: rgb(49, 105, 179);
   font-size: 10px;
   padding-left: 5vw;
   height: 10vh;
@@ -53,19 +60,19 @@ header{
   
 }
 .text4{
-  color: rgb(45, 122, 223);
+  color: rgb(49, 105, 179);
   font-size: 10px;
   padding-right: 50vw;
   padding-left: 5vw;
 }
 
 .percents{
-  color: rgb(45, 122, 223);
-  font-size: 20vh;
-  padding-left: 25px;
+  color: rgb(49, 105, 179);
+  font-size: 10vh;
+  text-align: center;
 }
 .text5{
-  color: rgb(45, 122, 223);
+  color: rgb(49, 105, 179);
   font-size: 17px;
   width: 65vw;
   font-weight: bold;
@@ -82,7 +89,7 @@ header{
 
 
 .text{
-  color: rgb(45, 122, 223);
+  color: rgb(49, 105, 179);
 
 
 }
@@ -116,4 +123,14 @@ footer{
   bottom: 40%;
   top: 0;
   margin-bottom: 20px;
+}
+
+/* show for desktop */
+@media only screen and (max-width: 360px){
+  .blue{
+    width: 100vw;
+    background-color: rgb(223, 45, 45);
+    padding-bottom: 70px;
+  }
+  
 }
