filling out @media css

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -38,13 +38,10 @@ header{
 
 .text1{
   color: rgb(49, 105, 179);
-  font-size: 25px;
+  font-size: 20px;
   width: 52vw;
   font-weight: bold;
   text-align: left;
-
-  
-  
 }
 .text2{
   display: inline-flex;
@@ -129,8 +126,31 @@ footer{
 @media only screen and (max-width: 360px){
   .blue{
     width: 100vw;
-    background-color: rgb(223, 45, 45);
+    color: rgb(49, 105, 179);
     padding-bottom: 70px;
   }
+  .text1{
+    color: rgb(49, 105, 179);
+    font-size: 20px;
+    width: 52vw;
+    font-weight: bold;
+    text-align: center;
+    padding-bottom: 30px;
+  }
+  .userImg{
+    width: 100vw;
+    height: 20vh;
+    align-items: center;
+  }
+  .text3{
+    color: rgb(49, 105, 179);
+    font-size: 10px;
+    height: 10vh;
+    width: 15vw;
+    text-align: center;
+
+    
+  }
+
   
 }
