--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -82,6 +82,12 @@ header{
   
 }
 
+.text6{
+  padding-left: 15vw;
+  color: rgb(49, 105, 179);
+
+}
+
 .buttonDiv{
   width: 50vw;
   text-align: center;
@@ -90,8 +96,6 @@ header{
 
 .text{
   color: rgb(49, 105, 179);
-
-
 }
 
 footer{
@@ -103,7 +107,7 @@ footer{
 .vertical-divider {
   position: absolute;
   display: table;
-  height: 35%;
+  height: 25%;
   width: 100%;
 }
 .vertical-divider .center-element {
@@ -119,7 +123,7 @@ footer{
   content: "";
   width: 1px;
   left: 38%;
-  border-left: 1px solid black;
+  border-left: 1px solid rgb(49, 105, 179);
 }
 .vertical-divider .center-element:before {
   bottom: 10%;
@@ -131,7 +135,6 @@ footer{
 @media only screen and (max-width: 400px){
   .blue{
     width: 100vw;
-    color: red;
     padding-bottom: 70px;
   }
   .text1{
@@ -148,7 +151,8 @@ footer{
     align-items: center;
   }
   .text3{
-    color: rgb(49, 105, 179);
+    /* color: rgb(49, 105, 179); */
+    color: red;
     font-size: 10px;
     height: 10vh;
     width: 15vw;
