--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -1,6 +1,7 @@
 /* desktop display */
 *{
   align-items: center;
+  
 }
 header {
   width: 100vw;
@@ -9,22 +10,24 @@ header {
 .body{
   padding-left: 60px;
   padding-top: 40px;
+  background-color: rgb(226, 221, 221);
 
   /* background-image: url('../../assets/pexels-andrea-piacquadio-920382\ \(1\).jpg'); */
   /* background-image: linear-gradient(90deg); */
 }
 
+header img{
+  height: 40px;
+  padding-left: 60px;
+  padding-top: 20px;
+  margin-bottom: 30px;
+}
 .userImg{
   width: 40vw;
   height: 100vh;
   padding-left: 50vw;
 }
 
-header img{
-  height: 40px;
-  padding-left: 60px;
-  margin-bottom: 70px;
-}
 header{
   padding-bottom: 70px;
 }
@@ -55,15 +58,14 @@ header{
   font-size: 10px;
   padding-left: 5vw;
   height: 10vh;
-  width: 10vw;
-  width: 15vw;
-  
+  width: 100px;
 }
 .text4{
   color: rgb(49, 105, 179);
   font-size: 10px;
-  padding-right: 50vw;
-  padding-left: 5vw;
+  /* padding-right: 50vw;*/
+  padding-left: 5vw; 
+  min-width: 150px;
 }
 
 .percents{
