--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -57,7 +57,7 @@ header{
   font-size: 10px;
   padding-left: 5vw;
   height: 10vh;
-  width: 100px;
+  min-width: 90px;
 }
 .text4{
   color: rgb(49, 105, 179);
@@ -108,22 +108,21 @@ footer{
 
 
 .userImg{
-  background: linear-gradient(90deg, transparent, white);
-  /* 
-        /* url("https://mdn.mozillademos.org/files/15525/critters.png"); */
-        /* url('../../assets/image.jpg');*/
+  height: 100px;
+  width: 200px;
+  background: url('../../assets/image.jpg');
+  /* background: linear-gradient(to left, transparent, white),
+              url('../../assets/image.jpg'); */
   }
 
   .divide{
     content: "";
     display: block;
     width: 1px;
-    height: 50px;
+    height: 40px;
     background: rgb(49, 105, 179);
     position: absolute;
-    left: 47vw;
-
-  
+    left: 50vw;
   }
 
 
@@ -133,6 +132,10 @@ footer{
 /* //////////////////////////////// */
 /* show for mobile view */
 @media only screen and (max-width: 400px){
+
+  *{
+    align-items: center;
+  }
   .blue{
     width: 100vw;
     padding-bottom: 70px;
@@ -147,10 +150,8 @@ footer{
     height: 1px;
     background: rgb(49, 105, 179);
     position: absolute;
-    left: 38vw;
-    top: 93vh;
-    
-
+    left: 35vw;
+    top: 80vh;
   }
   .text1{
     color: rgb(49, 105, 179);
@@ -192,30 +193,6 @@ footer{
     color: rgb(49, 105, 179);
   }
 
-  .vertical-divider {
-    position: absolute;
-    /* display: table; */
-    height: 25%;
-    width: 100%;
-  }
-  .vertical-divider .center-element {
-    position: relative;
-    /* vertical-align: middle; */
-    display: none
-  
-  }
-  .vertical-divider .center-element:before,
-  .vertical-divider .center-element:after {
-    position: absolute;
-    content: "";
-    width: 1px;
-    left: 38%;
-    border-bottom: 1px solid rgb(49, 105, 179);
-  }
-  .vertical-divider .center-element:before {
-    bottom: 10%;
-    top: 0;
-    margin-bottom: 20px;
-  }
+
 
 }
