issues with mobile view

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -140,6 +140,11 @@ footer{
   *{
     align-items: center;
   }
+  body{
+    background-size: cover;
+   
+
+  }
   .blue{
     width: 100vw;
     padding-bottom: 70px;
